--- a/slides/slides.jade
+++ b/slides/slides.jade
@@ -3,10 +3,10 @@ div.slides
         h1 SOLID JavaScript Tool Chain
         br
         br
-        h3 by Peter Ajtai
+        h3 by Peter Ajtai.
         h4 a Lead Dev at:
         a(href="http://www.thinksolid.com/")
-            img(src="img/logo.gif",alt="SOLID logo")
+            img(src="assets/logo.gif",alt="SOLID logo")
 
     section
         h3 Things to help you create a maintainable, testable, reusable, and fun to work on application.</h3>
@@ -40,6 +40,6 @@ div.slides
         h1 THE END
         br
         h2 by Peter Ajtai
-        img(src="img/logo.gif",alt="SOLID logo")
+        img(src="assets/logo.gif",alt="SOLID logo")
         h3 Thanks to: Hakim El Hattab / hakim.se for
         a(href="http://lab.hakim.se/reveal-js/") RevealJS
