--- a/slides/slides.jade
+++ b/slides/slides.jade
@@ -1,45 +1,63 @@
-div.slides
-    section
-        h1 SOLID JavaScript Tool Chain
-        br
-        br
-        h3 by Peter Ajtai.
-        h4 a Lead Dev at:
-        a(href="http://www.thinksolid.com/")
-            img(src="assets/logo.gif",alt="SOLID logo")
 
-    section
-        h3 Things to help you create a maintainable, testable, reusable, and fun to work on application.</h3>
+section
+    pre
+        code(data-trim, contenteditable).
+            function linkify( selector ) {
+              if( supports3DTransforms ) {
 
+                var nodes = document.querySelectorAll( selector );
 
-        ul
-            li.fragment Responsibilities and Communication
-                ul
-                    li MV* & PubSub with Backbone
-            li.fragment Templating
-                ul
-                    li Frontend - Underscore
-                    li Backend - Jade
-            li.fragment CSS management
-                ul
-                    li SASS
-            li.fragment Dependency Management
-                ul
-                    li AMD with RequireJS
-            li.fragment Testing
-                ul
-                    li Jasmine
-            li.fragment DOM interaction and promises
-                ul
-                    li jQuery
-            li.fragment Build management
-                ul
-                    li Grunt
+                for( var i = 0, len = nodes.length; i &lt; len; i++ ) {
+                  var node = nodes[i];
 
-    section
-        h1 THE END
-        br
-        h2 by Peter Ajtai
+                  if( !node.className ) ) {
+                    node.className += ' roll';
+                  }
+                };
+              }
+            }
+
+section
+    h1 SOLID JavaScript Tool Chain
+    br
+    br
+    h3 by Peter Ajtai
+    h4 a Lead Dev at:
+    a(href="http://www.thinksolid.com/")
         img(src="assets/logo.gif",alt="SOLID logo")
-        h3 Thanks to: Hakim El Hattab / hakim.se for
-        a(href="http://lab.hakim.se/reveal-js/") RevealJS
+
+section
+    h3 Things to help you create a maintainable, testable, reusable, and fun to work on application.</h3>
+
+
+    ul
+        li.fragment Responsibilities and Communication
+            ul
+                li MV* & PubSub with Backbone
+        li.fragment Templating
+            ul
+                li Frontend - Underscore
+                li Backend - Jade
+        li.fragment CSS management
+            ul
+                li SASS
+        li.fragment Dependency Management
+            ul
+                li AMD with RequireJS
+        li.fragment Testing
+            ul
+                li Jasmine
+        li.fragment DOM interaction and promises
+            ul
+                li jQuery
+        li.fragment Build management
+            ul
+                li Grunt
+
+section
+    h1 THE END
+    br
+    h2 by Peter Ajtai
+    img(src="assets/logo.gif",alt="SOLID logo")
+    h3 Thanks to: Hakim El Hattab / hakim.se for
+    a(href="http://lab.hakim.se/reveal-js/") RevealJS
